tests/errors/surf_parse_14.ki
# PARSER: a var declaration with no '=' initializer
var x